--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -16,18 +16,10 @@ jobs:
     - shell: bash
       run: mkdir ~/android-env/
 
-    - name: specify NDK
+    - name: Specify NDK
       run: |
           wget -q "https://dl.google.com/android/repository/android-ndk-r14b-linux-x86_64.zip"
           unzip -q android-ndk-r14b-linux-x86_64.zip -d ~/android-env/
-
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-          java-version: 1.8
-
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
 
     - name: Build ijkplayer
       run: |
