--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -29,16 +29,18 @@ jobs:
           export ANDROID_NDK=~/android-env/android-ndk-r14b
           export ANDROID_NDK_ROOT=$ANDROID_NDK
           export NDK_ROOT=$ANDROID_NDK
-          ./init-android.sh
-          ./extra/init-extra.sh
-          cd android/contrib
-          ./compile-openssl.sh
-          ./compile-libsoxr.sh
-          ./compile-ffmpeg.sh
+          sh init-android.sh
+          cd extra
+          sh init-extra.sh
           cd ..
-          ./compile-ijk.sh
+          cd android/contrib
+          sh compile-openssl.sh all
+          sh compile-libsoxr.sh all
+          sh compile-ffmpeg.sh all
+          cd ..
+          sh compile-ijk.sh all
 
-    - name: Upload SDK
+    - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
           name: ijkplayer
