--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -34,15 +34,17 @@ jobs:
           ./init-extra.sh
           cd ..
           cd android/contrib
+          ./compile-libsoxr.sh all
+          ./compile-openssl.sh all
           ./compile-ffmpeg.sh all
           cd ..
           ./compile-ijk.sh all
           mkdir output
-          cp -R ijkplayer/ijkplayer-arm64/src/main/libs output/ 2>/dev/null || :
-          cp -R ijkplayer/ijkplayer-armv5/src/main/libs output/ 2>/dev/null || :
-          cp -R ijkplayer/ijkplayer-armv7a/src/main/libs output/ 2>/dev/null || :
-          cp -R ijkplayer/ijkplayer-x86/src/main/libs output/ 2>/dev/null || :
-          cp -R ijkplayer/ijkplayer-x86_64/src/main/libs output/ 2>/dev/null || :
+          cp -R ijkplayer/ijkplayer-arm64/src/main/libs/ output/ 2>/dev/null || :
+          cp -R ijkplayer/ijkplayer-armv5/src/main/libs/ output/ 2>/dev/null || :
+          cp -R ijkplayer/ijkplayer-armv7a/src/main/libs/ output/ 2>/dev/null || :
+          cp -R ijkplayer/ijkplayer-x86/src/main/libs/ output/ 2>/dev/null || :
+          cp -R ijkplayer/ijkplayer-x86_64/src/main/libs/ output/ 2>/dev/null || :
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
